packageType checker added

--- a/src/main/webapp/app/modules/order/packageSelection/packageSelection.scss
+++ b/src/main/webapp/app/modules/order/packageSelection/packageSelection.scss
@@ -2,8 +2,8 @@
   width: 100%;
 }
 
-.productItem {
-  padding: 20px 0 20px 20px !important;
+.packageItem {
+  padding: 5px;
 }
 
 .packageButton {
