--- a/src/main/webapp/app/modules/order/productSelection/product/product.scss
+++ b/src/main/webapp/app/modules/order/productSelection/product/product.scss
@@ -1,11 +1,11 @@
 .hidden {
   display: none;
-  padding: 20px 0 20px 20px !important;
+  padding: 5px;
 }
 
 .show {
   display: block;
-  padding: 20px 0 20px 20px !important;
+  padding: 5px;
 }
 .productRibbon {
   background-color: rgba(6, 120, 28, 0.5);
