--- a/src/main/webapp/app/modules/order/stepper/stepper.scss
+++ b/src/main/webapp/app/modules/order/stepper/stepper.scss
@@ -5,7 +5,7 @@
 }
 
 .nextButton {
-  background-image: linear-gradient(90deg, #dc307c, #5e62b0, #33b7e2);
+  background: #c19b6a;
   color: white;
   border: none;
   padding: 5px;
