--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   height: 100vh;
+
   background-image: linear-gradient(90deg, #c19b6a, #dfbd6e, #c19b6a) !important;
 }
 
@@ -29,7 +30,7 @@ a {
   height: 100vh;
   .view-container {
     width: 100%;
-    height: calc(100% - 40px);
+    height: calc(100%);
     overflow-y: auto;
     overflow-x: hidden;
     padding: 1rem;
