--- a/src/main/webapp/app/modules/order/stepper/stepper.scss
+++ b/src/main/webapp/app/modules/order/stepper/stepper.scss
@@ -22,12 +22,18 @@
   transform: translateY(2px);
 }
 
-.overview {
+.side-by-side {
   flex-grow: 1;
   transition: all 1s ease;
 }
 
-.activeStep {
+.sidebar-hidden {
+  flex-grow: 0;
+  flex-shrink: 0;
+  transition: all 1s ease;
+}
+
+.sidebar {
   flex-grow: 3;
   transition: all 1s ease;
 }
