product selection layout changes

--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -35,6 +35,7 @@ a {
     overflow-x: hidden;
     padding: 1rem;
     .card {
+      box-shadow: none;
       padding: 1rem;
     }
     .view-routes {
