background video added

--- a/src/main/webapp/app/modules/home/home.scss
+++ b/src/main/webapp/app/modules/home/home.scss
@@ -10,7 +10,7 @@ Main page styles
 }
 
 .title {
-  font-size: 120px;
+  font-size: 5rem;
   text-transform: uppercase;
   font-family: 'Gambetta', serif;
   letter-spacing: -3px;
