--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -25,6 +25,16 @@ a {
   }
 }
 
+#background-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  padding: 0;
+}
+
 .app-container {
   box-sizing: border-box;
   height: 100vh;
@@ -33,7 +43,7 @@ a {
     height: calc(100%);
     overflow-y: auto;
     overflow-x: hidden;
-    padding: 1rem;
+    /*  padding: 1rem; */
     .card {
       box-shadow: none;
       padding: 1rem;
