--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -110,7 +110,7 @@ Generic styles
 /* other generic styles */
 
 .title {
-  font-size: 1.25em;
+  font-size: 2rem;
   margin: 1px 10px 1px 10px;
 }
 
