--- a/src/main/webapp/app/modules/home/home.scss
+++ b/src/main/webapp/app/modules/home/home.scss
@@ -8,3 +8,13 @@ Main page styles
   background: url('../../../content/images/jhipster_family_member_2.svg') no-repeat center top;
   background-size: contain;
 }
+
+#background-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  padding: 0;
+}
