--- a/src/main/webapp/app/modules/order/productSelection/productSelection.scss
+++ b/src/main/webapp/app/modules/order/productSelection/productSelection.scss
@@ -17,8 +17,8 @@
 }
 
 .product-scrolling {
-  overflow-x: hidden;
-  overflow-y: auto;
+  /* overflow-x: hidden;
+  overflow-y: auto; */
   height: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
