--- a/src/main/webapp/app/modules/order/stepper/stepper.scss
+++ b/src/main/webapp/app/modules/order/stepper/stepper.scss
@@ -23,8 +23,8 @@
 .side-by-side {
   flex-grow: 1;
   transition: all 1s ease;
-  overflow-x: hidden;
-  overflow-y: auto;
+  /*   overflow-x: hidden;
+  overflow-y: auto; */
   height: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -39,8 +39,8 @@
 .sidebar {
   flex-grow: 3;
   transition: all 1s ease;
-  overflow-x: hidden;
-  overflow-y: auto;
+  /*   overflow-x: hidden;
+  overflow-y: auto; */
   height: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
