--- a/src/main/webapp/app/modules/order/productSelection/product/product.scss
+++ b/src/main/webapp/app/modules/order/productSelection/product/product.scss
@@ -26,17 +26,6 @@
   animation-name: bounce;
   animation-timing-function: ease;
 } */
-@keyframes bounce {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(-10px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
 
 .showInfo {
   display: fixed;
@@ -53,4 +42,36 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.productImage {
+  background-color: antiquewhite;
+  margin-top: -20%;
+  width: 20rem;
+  border-radius: 20px;
+}
+
+.cardProduct {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+
+  width: 25rem;
+  height: 40rem;
+
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
+}
+
+.cardProductInfo {
+  width: 40rem;
+  background-color: antiquewhite;
+
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
 }
