--- a/src/main/webapp/app/modules/order/productSelection/productSelection.scss
+++ b/src/main/webapp/app/modules/order/productSelection/productSelection.scss
@@ -31,3 +31,20 @@
 .productRow {
   padding-bottom: 5px;
 }
+
+/* ANIMATIONS */
+.slide-enter {
+  transform: translateX(100%);
+}
+.slide-enter-active {
+  transform: translateX(0%);
+  transition: transform 500ms ease-in-out;
+}
+
+.slide-exit {
+  transform: translate(0%, -100%);
+}
+.slide-exit-active {
+  transform: translate(-100%, -100%);
+  transition: transform 500ms ease-in-out;
+}
