--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -38,6 +38,11 @@ a {
     .card {
       box-shadow: none;
       padding: 1rem;
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+    .card::-webkit-scrollbar {
+      display: none;
     }
     .view-routes {
       height: 100%;
